@@ -36,6 +36,8 @@ c - crash     b - bug fix    e - enhancement    f - new feature  n - note
       with gcc-warnings enabled.
   b - No longer overwrites the user's environment when spoolasfinalname is set.
       Now the environment is handled correctly.
+  b - No longer will segfault if pbs_mom restarts in a bad state (user environment 
+      not initialized)
 
 2.4.4
   b - fixed contrib/init.d/pbs_mom so that it doesn't overwrite $args defined in
